# XrayWa-Bot-

./: README.md  pyproject.toml  requirements.txt
bot/: server.py
bot/cache/: redis.py
bot/config/: env.py
bot/core/: dummy.py  marzban_handlers.py  messages.py  routes.py  schema.py  utils.py
bot/supabase/: client.py  handlers.py
